main with lock