@@ -1,2 +1,2 @@
-"C:\Program Files\Java\jdk1.8.0_45\bin\java" -server -Xmx512m -XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:gc.no.leak.log -cp "D:\Projects\Presentation performance\target\classes" ch.talan.javalanche.leak.MainNoLeak
+"C:\Program Files\Java\jdk1.8.0_45\bin\java" -server -Xmx512m -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:gc.no.leak.log -cp "D:\Projects\DemoTalan\target\classes" ch.talan.javalanche.MainNoLeak
 
